--- a/admin-service/src/main/resources/templates/student-manage.html
+++ b/admin-service/src/main/resources/templates/student-manage.html
@@ -31,7 +31,7 @@
                         <dd><a href="">the links</a></dd>
                     </dl>
                 </li>
-                <li class="layui-nav-item"><a href="javascript:;">学生账户管理</a></li>
+                <li class="layui-nav-item"><a th:href="@{/student/manage}">学生账户管理</a></li>
                 <li class="layui-nav-item"><a href="javascript:;">教师账户管理</a></li>
             </ul>
         </div>
@@ -39,9 +39,51 @@
 
     <div class="layui-body">
         <!-- 内容主体区域 -->
-        <div style="padding: 15px;">内容主体区域。记得修改 layui.css 和 js 的路径</div>
-        <div th:each="student:${students}">
-            <div th:text="${student.toString()}"></div>
+        <div style="padding: 15px;">
+            <form class="layui-form layui-form-pane" th:action="@{/student/manage/search}" method="post">
+                <div class="layui-form-item">
+                    <label class="layui-form-label">
+                        <button class="layui-btn layui-btn-fluid layui-btn-xs layui-btn-primary" lay-submit type="submit">搜索</button>
+                    </label>
+                    <div class="layui-input-block">
+                        <input type="text" name="searchString" required  lay-verify="required" placeholder="请输入搜索内容" autocomplete="off" class="layui-input">
+                    </div>
+                </div>
+            </form>
+            <a th:href="@{/student/manage/add}" class="layui-btn layui-btn-primary layui-btn-fluid layui-border-green">添加</a>
+            <table class="layui-table">
+                <thead>
+                <tr>
+                    <th>学号</th>
+                    <th>姓名</th>
+                    <th>性别</th>
+                    <th>学院</th>
+                    <th>专业</th>
+                    <th>班级</th>
+                    <th>电话</th>
+                    <th>邮箱</th>
+                    <th>操作</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="student:${students}">
+                    <td th:text="${student.getsNo()}"></td>
+                    <td th:text="${student.getName()}"></td>
+                    <td th:text="${student.getGender()}"></td>
+                    <td th:text="${student.getSchool()}"></td>
+                    <td th:text="${student.getMajor()}"></td>
+                    <td th:text="${student.getClassNo()}"></td>
+                    <td th:text="${student.getTele()}"></td>
+                    <td th:text="${student.getEmail()}"></td>
+                    <td>
+                        <div class="layui-btn-group">
+                            <a class="layui-btn layui-btn-sm" th:href="@{/student/manage/update/}+${student.getsId}">编辑</a>
+                            <a class="layui-btn layui-btn-sm layui-btn-danger" th:href="@{/student/manage/delete/}+${student.getsId}">删除</a>
+                        </div>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
         </div>
     </div>
 
