管理员教师管理&教师模块的初步开发

--- a/admin-service/src/main/resources/templates/teacher-manage.html
+++ b/admin-service/src/main/resources/templates/teacher-manage.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>学生信息管理</title>
+    <title>教师信息管理</title>
     <link rel="stylesheet" th:href="@{/layui/css/layui.css}">
 </head>
-
 <body>
 <div class="layui-layout layui-layout-admin">
     <!--引入公共头部-->
@@ -18,7 +17,7 @@
     <div class="layui-body">
         <!-- 内容主体区域 -->
         <div style="padding: 15px;">
-            <form class="layui-form layui-form-pane" th:action="@{/student/manage/search}" method="post">
+            <form class="layui-form layui-form-pane" th:action="@{/teacher/manage/search}" method="post">
                 <div class="layui-form-item">
                     <label class="layui-form-label">
                         <button class="layui-btn layui-btn-fluid layui-btn-xs layui-btn-primary" lay-submit type="submit">搜索</button>
@@ -28,35 +27,33 @@
                     </div>
                 </div>
             </form>
-            <a th:href="@{/student/manage/add}" class="layui-btn layui-btn-primary layui-btn-fluid layui-border-green">添加</a>
+            <a th:href="@{/teacher/manage/add}" class="layui-btn layui-btn-primary layui-btn-fluid layui-border-green">添加</a>
             <table class="layui-table">
                 <thead>
                 <tr>
-                    <th>学号</th>
+                    <th>教师号</th>
                     <th>姓名</th>
                     <th>性别</th>
                     <th>学院</th>
-                    <th>专业</th>
-                    <th>班级</th>
+                    <th>职称</th>
                     <th>电话</th>
                     <th>邮箱</th>
                     <th>操作</th>
                 </tr>
                 </thead>
                 <tbody>
-                <tr th:each="student:${students}">
-                    <td th:text="${student.getsNo()}"></td>
-                    <td th:text="${student.getName()}"></td>
-                    <td th:text="${student.getGender()}"></td>
-                    <td th:text="${student.getSchool()}"></td>
-                    <td th:text="${student.getMajor()}"></td>
-                    <td th:text="${student.getClassNo()}"></td>
-                    <td th:text="${student.getTele()}"></td>
-                    <td th:text="${student.getEmail()}"></td>
+                <tr th:each="teacher:${teachers}">
+                    <td th:text="${teacher.gettNo()}"></td>
+                    <td th:text="${teacher.getName()}"></td>
+                    <td th:text="${teacher.getGender()}"></td>
+                    <td th:text="${teacher.getSchool()}"></td>
+                    <td th:text="${teacher.getTitle()}"></td>
+                    <td th:text="${teacher.getTele()}"></td>
+                    <td th:text="${teacher.getEmail()}"></td>
                     <td>
                         <div class="layui-btn-group">
-                            <a class="layui-btn layui-btn-sm" th:href="@{/student/manage/update/}+${student.getsId}">编辑</a>
-                            <a class="layui-btn layui-btn-sm layui-btn-danger" th:href="@{/student/manage/delete/}+${student.getsId}">删除</a>
+                            <a class="layui-btn layui-btn-sm" th:href="@{/teacher/manage/update/}+${teacher.gettId()}">编辑</a>
+                            <a class="layui-btn layui-btn-sm layui-btn-danger" th:href="@{/teacher/manage/delete/}+${teacher.gettId()}">删除</a>
                         </div>
                     </td>
                 </tr>
@@ -67,11 +64,9 @@
 
     <!--引入公共底部-->
     <div th:replace="common :: #common-bottom"></div>
-
 </div>
 
 <!--引入公共script-->
 <div th:replace="common :: #common-script"></div>
-
 </body>
 </html>
