--- a/admin-service/src/main/resources/templates/student-manage-add.html
+++ b/admin-service/src/main/resources/templates/student-manage-add.html
@@ -3,39 +3,16 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>layout 管理系统大布局 - Layui</title>
+    <title>新增学生信息</title>
     <link rel="stylesheet" th:href="@{/layui/css/layui.css}">
 </head>
 <body>
 <div class="layui-layout layui-layout-admin">
-    <div class="layui-header">
-        <div class="layui-logo layui-hide-xs layui-bg-black">毕业设计全程管理系统</div>
-        <!-- 头部区域（可配合layui 已有的水平导航） -->
-        <ul class="layui-nav layui-layout-right">
-            <li class="layui-nav-item layui-hide layui-show-md-inline-block">
-                <a>王涛，欢迎使用本系统！</a>
-            </li>
-        </ul>
-    </div>
+    <!--引入公共头部-->
+    <div th:replace="common :: #common-header"></div>
 
-    <div class="layui-side layui-bg-black">
-        <div class="layui-side-scroll">
-            <!-- 左侧导航区域（可配合layui已有的垂直导航）-->
-            <ul class="layui-nav layui-nav-tree" lay-filter="test">
-                <li class="layui-nav-item">
-                    <a class="" href="javascript:;">毕设课题管理</a>
-                    <dl class="layui-nav-child">
-                        <dd><a href="javascript:;">menu 1</a></dd>
-                        <dd><a href="javascript:;">menu 2</a></dd>
-                        <dd><a href="javascript:;">menu 3</a></dd>
-                        <dd><a href="">the links</a></dd>
-                    </dl>
-                </li>
-                <li class="layui-nav-item"><a th:href="@{/student/manage}">学生账户管理</a></li>
-                <li class="layui-nav-item"><a href="javascript:;">教师账户管理</a></li>
-            </ul>
-        </div>
-    </div>
+    <!--引入公共侧边栏-->
+    <div th:replace="common :: #common-side"></div>
 
     <div class="layui-body">
         <!-- 内容主体区域 -->
@@ -100,49 +77,11 @@
         </div>
     </div>
 
-    <div class="layui-footer">
-        <!-- 底部固定区域 -->
-        Graduation Project Management System
-    </div>
+    <!--引入公共底部-->
+    <div th:replace="common :: #common-bottom"></div>
 </div>
-<script th:src="@{/layui/layui.js}"></script>
-<script>
-    //JS
-    layui.use(['element', 'layer', 'util'], function(){
-        var element = layui.element
-            ,layer = layui.layer
-            ,util = layui.util
-            ,$ = layui.$;
 
-        //头部事件
-        util.event('lay-header-event', {
-            //左侧菜单事件
-            menuLeft: function(othis){
-                layer.msg('展开左侧菜单的操作', {icon: 0});
-            }
-            ,menuRight: function(){
-                layer.open({
-                    type: 1
-                    ,content: '<div style="padding: 15px;">处理右侧面板的操作</div>'
-                    ,area: ['260px', '100%']
-                    ,offset: 'rt' //右上角
-                    ,anim: 5
-                    ,shadeClose: true
-                });
-            }
-        });
-
-    });
-
-    layui.use('form', function(){
-        var form = layui.form;
-
-        //监听提交
-        form.on('submit(formDemo)', function(data){
-            layer.msg(JSON.stringify(data.field));
-            return false;
-        });
-    });
-</script>
+<!--引入公共script-->
+<div th:replace="common :: #common-script"></div>
 </body>
 </html>
