完成开发admin模块

--- a/teacher-service/src/main/resources/templates/common.html
+++ b/teacher-service/src/main/resources/templates/common.html
@@ -28,7 +28,7 @@
     <div class="layui-side-scroll">
         <!-- 左侧导航区域（可配合layui已有的垂直导航）-->
         <ul class="layui-nav layui-nav-tree" lay-filter="test">
-            <li class="layui-nav-item"><a th:href="@{/project/add}">立题</a></li>
+            <li class="layui-nav-item"><a th:href="@{/project/add}">新增立题</a></li>
             <li class="layui-nav-item">
                 <a class="" href="javascript:;">毕设课题管理</a>
                 <dl class="layui-nav-child">
