--- a/teacher-service/src/main/resources/templates/project-add.html
+++ b/teacher-service/src/main/resources/templates/project-add.html
@@ -16,7 +16,12 @@
 
     <div class="layui-body">
         <!-- 内容主体区域 -->
-        <div style="padding: 15px;">
+        <div th:if="${createStatus.equals(0)}" style="padding: 15px;">
+            <!--立题功能没有开启，则显示本标签-->
+            <h1>立题功能没有开启，无法立题，可联系管理员开启</h1>
+        </div>
+        <div th:if="${createStatus.equals(1)}" style="padding: 15px;">
+            <!--立题功能开启了，则开放本标签-->
             <form class="layui-form" th:action="@{/project/add}" method="post">
                 <div class="layui-form-item">
                     <label class="layui-form-label">课题题目</label>
