--- a/teacher-service/src/main/resources/templates/common.html
+++ b/teacher-service/src/main/resources/templates/common.html
@@ -33,7 +33,7 @@
                 <a class="" href="javascript:;">毕设课题管理</a>
                 <dl class="layui-nav-child">
                     <dd><a th:href="@{/project}">查看我的课题</a></dd>
-                    <dd><a th:href="@{/project/update}">修改课题信息</a></dd>
+                    <dd><a th:href="@{/project/stage}">添加阶段要求与文档</a></dd>
                 </dl>
             </li>
             <li class="layui-nav-item"><a th:href="@{/student}">我的学生</a></li>
