--- a/student-service/src/main/resources/templates/project-choose-cancel.html
+++ b/student-service/src/main/resources/templates/project-choose-cancel.html
@@ -1,10 +1,73 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <title>退选课题</title>
+    <link rel="stylesheet" th:href="@{/layui/css/layui.css}">
 </head>
 <body>
+<div class="layui-layout layui-layout-admin">
+    <!--引入公共头部-->
+    <div th:replace="common :: #common-header"></div>
 
+    <!--引入公共侧边栏-->
+    <div th:replace="common :: #common-side"></div>
+
+    <div class="layui-body">
+        <!-- 内容主体区域 -->
+        <div style="padding: 15px;">
+
+            <h1>课题信息</h1>
+            <br>
+            <form class="layui-form layui-form-pane">
+                <div class="layui-form-item">
+                    <label class="layui-form-label">课题题目</label>
+                    <div class="layui-input-block">
+                        <input th:value="${project.getTitle()}" disabled="disabled" type="text" name="title" required  lay-verify="required" autocomplete="off" class="layui-input">
+                    </div>
+                </div>
+                <div class="layui-form-item layui-form-text">
+                    <label class="layui-form-label">课题描述</label>
+                    <div class="layui-input-block">
+                        <textarea th:text="${project.getContent()}" disabled="disabled" name="content" class="layui-textarea"></textarea>
+                    </div>
+                </div>
+                <div class="layui-form-item">
+                    <label class="layui-form-label">课题类型</label>
+                    <div class="layui-input-block">
+                        <input th:value="${project.getType()}" disabled="disabled" type="text" required  lay-verify="required" autocomplete="off" class="layui-input">
+                    </div>
+                </div>
+                <div class="layui-form-item">
+                    <label class="layui-form-label">课题性质</label>
+                    <div class="layui-input-block">
+                        <input th:value="${project.getNature()}" disabled="disabled" type="text" required  lay-verify="required" autocomplete="off" class="layui-input">
+                    </div>
+                </div>
+                <div class="layui-form-item">
+                    <label class="layui-form-label">课题状态</label>
+                    <div class="layui-input-block">
+                        <input th:value="${project.getStatus()}" disabled="disabled" type="text" required  lay-verify="required" autocomplete="off" class="layui-input">
+                    </div>
+                </div>
+                <div class="layui-form-item">
+                    <label class="layui-form-label">选题时间</label>
+                    <div class="layui-input-block">
+                        <input th:value="${#dates.format(project.getSelectionTime(),'yyyy-MM-dd')}" disabled="disabled" type="text" required  lay-verify="required" autocomplete="off" class="layui-input">
+                    </div>
+                </div>
+            </form>
+            <a class="layui-btn layui-btn-danger layui-btn-fluid" th:href="@{/project/choose/cancel/}+${project.getpId()}">退选该课题</a>
+
+        </div>
+    </div>
+
+    <!--引入公共底部-->
+    <div th:replace="common :: #common-bottom"></div>
+</div>
+
+<!--引入公共script-->
+<div th:replace="common :: #common-script"></div>
 </body>
 </html>
