学生模块的推进

--- a/student-service/src/main/resources/templates/common.html
+++ b/student-service/src/main/resources/templates/common.html
@@ -38,7 +38,7 @@
                 </dl>
             </li>
             <li class="layui-nav-item"><a th:href="@{/project/process}">过程记录表</a></li>
-            <li class="layui-nav-item"><a th:href="@{/update}">个人信息更新</a></li>
+            <li class="layui-nav-item"><a th:href="@{/update.html}">个人信息更新</a></li>
         </ul>
     </div>
 </div>
