--- a/student-service/src/main/resources/templates/project-stage-file.html
+++ b/student-service/src/main/resources/templates/project-stage-file.html
@@ -59,7 +59,7 @@
                     <div class="layui-form-item">
                         <label class="layui-form-label">上传文件</label>
                         <div class="layui-input-block">
-                            <input type="file" name="uploadFiles" multiple>
+                            <input type="file" name="uploadFiles" multiple required lay-verify="required">
                             <p>*可按住Ctrl键同时选中多个文件上传，总大小小于500MB*</p>
                         </div>
                     </div>
