--- a/teacher-service/src/main/resources/templates/common.html
+++ b/teacher-service/src/main/resources/templates/common.html
@@ -38,7 +38,7 @@
             </li>
             <li class="layui-nav-item"><a th:href="@{/student}">我的学生</a></li>
             <li class="layui-nav-item"><a th:href="@{/project/process}">过程记录表批改</a></li>
-            <li class="layui-nav-item"><a th:href="@{/update}">个人信息更新</a></li>
+            <li class="layui-nav-item"><a th:href="@{/update.html}">个人信息更新</a></li>
         </ul>
     </div>
 </div>
