--- a/student-service/src/main/resources/templates/student-update.html
+++ b/student-service/src/main/resources/templates/student-update.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>修改教师信息</title>
+    <title>修改学生信息</title>
     <link rel="stylesheet" th:href="@{/layui/css/layui.css}">
 </head>
 <body>
@@ -18,53 +18,65 @@
         <!-- 内容主体区域 -->
         <div style="padding: 15px;">
             <form class="layui-form" th:action="@{/update}" method="post">
-                <input type="hidden" name="tId" th:value="${teacher.gettId()}">
+                <input type="hidden" name="sId" th:value="${student.getsId()}">
                 <div class="layui-form-item">
-                    <label class="layui-form-label">教师号</label>
+                    <label class="layui-form-label">学号</label>
                     <div class="layui-input-block">
-                        <input type="text" disabled="disabled" th:value="${teacher.gettNo()}" required  lay-verify="required" autocomplete="off" class="layui-input">
+                        <input type="text" disabled="disabled" th:value="${student.getsNo()}" required  lay-verify="required" autocomplete="off" class="layui-input">
                     </div>
                 </div>
                 <div class="layui-form-item">
                     <label class="layui-form-label">姓名</label>
                     <div class="layui-input-block">
-                        <input type="text" disabled="disabled" th:value="${teacher.getName()}" required  lay-verify="required" autocomplete="off" class="layui-input">
+                        <input type="text" disabled="disabled" th:value="${student.getName()}" required  lay-verify="required" autocomplete="off" class="layui-input">
+                    </div>
+                </div>
+                <div class="layui-form-item">
+                    <label class="layui-form-label">性别</label>
+                    <div class="layui-input-block">
+                        <input type="text" disabled="disabled" th:value="${student.getGender()}" required  lay-verify="required" autocomplete="off" class="layui-input">
                     </div>
                 </div>
                 <div class="layui-form-item">
                     <label class="layui-form-label">学院</label>
                     <div class="layui-input-block">
-                        <input type="text" disabled="disabled" th:value="${teacher.getSchool()}" required  lay-verify="required" autocomplete="off" class="layui-input">
+                        <input type="text" disabled="disabled" th:value="${student.getSchool()}" required  lay-verify="required" autocomplete="off" class="layui-input">
                     </div>
                 </div>
                 <div class="layui-form-item">
-                    <label class="layui-form-label">职称</label>
+                    <label class="layui-form-label">专业</label>
                     <div class="layui-input-block">
-                        <input type="text" disabled="disabled" th:value="${teacher.getTitle()}" required  lay-verify="required" autocomplete="off" class="layui-input">
+                        <input type="text" disabled="disabled" th:value="${student.getMajor()}" required  lay-verify="required" autocomplete="off" class="layui-input">
+                    </div>
+                </div>
+                <div class="layui-form-item">
+                    <label class="layui-form-label">班级号</label>
+                    <div class="layui-input-block">
+                        <input type="text" disabled="disabled" th:value="${student.getClassNo()}" required  lay-verify="required" autocomplete="off" class="layui-input">
                     </div>
                 </div>
                 <div class="layui-form-item">
                     <label class="layui-form-label">电话</label>
                     <div class="layui-input-block">
-                        <input type="text" name="tele" th:value="${teacher.getTele()}" required  lay-verify="required" autocomplete="off" class="layui-input">
+                        <input type="text" name="tele" th:value="${student.getTele()}" required  autocomplete="off" class="layui-input">
                     </div>
                 </div>
                 <div class="layui-form-item">
                     <label class="layui-form-label">邮箱</label>
                     <div class="layui-input-block">
-                        <input type="text" name="email" th:value="${teacher.getEmail()}" required  autocomplete="off" class="layui-input">
+                        <input type="text" name="email" th:value="${student.getEmail()}" required  autocomplete="off" class="layui-input">
                     </div>
                 </div>
                 <div class="layui-form-item">
                     <label class="layui-form-label">密码</label>
                     <div class="layui-input-block">
-                        <input type="password" name="password" th:value="${teacher.getPassword()}" required  autocomplete="off" class="layui-input">
+                        <input type="password" name="password" th:value="${student.getPassword()}" required  autocomplete="off" class="layui-input">
                     </div>
                 </div>
                 <div class="layui-form-item">
                     <label class="layui-form-label">确认密码</label>
                     <div class="layui-input-block">
-                        <input type="password" name="passwordConfirm" th:value="${teacher.getPassword()}" required  autocomplete="off" class="layui-input">
+                        <input type="password" name="passwordConfirm" th:value="${student.getPassword()}" required  autocomplete="off" class="layui-input">
                     </div>
                 </div>
                 <div class="layui-form-item">
